# ceserver-api

./: .gitignore  Client.py  LICENSE  README.md  client.py  commands.py  data_classes.py  entities.py  helpers.py  port_help.py  pyproject.toml  request_memory.py  structs.py
ceserver_api/: __init__.py  client.py  commands.py
